[package]
name = "macro_railroad_annotation"
description = "Easily embed macro_railroad images in your docs using this attribute macro!"
version = "1.0.0"
authors = ["Justus Flügel <justusfluegel@gmail.com>"]
repository = "https://github.com/JustusFluegel/macro_railroad-Annotations"
keywords = ["macro_railroad", "documentation", "docsrs", "decl_macros", "macros"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
macro_railroad = "0.1.5"
manyhow = "0.11.0"
proc-macro2 = { version = "1.0.78", features = ["span-locations"] }
quote = "1.0.35"
rand = "0.8.5"
syn = { version = "2.0.48", features = ["full"] }
